openshift/api-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: uservice-django-poc
  name: uservice-django-poc-api
  namespace: experiments
spec:
  replicas: 1
  selector:
    app: uservice-django-poc
    deploymentconfig: uservice-django-poc-api
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: uservice-django-poc
        deploymentconfig: uservice-django-poc-api
    spec:
      containers:
      - image: uservice-django-poc-api:latest
        imagePullPolicy: Always
        name: uservice-django-poc-api
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - uservice-django-poc-api
      from:
        kind: ImageStreamTag
        name: uservice-django-poc-api:latest
        namespace: experiments
    type: ImageChange
