openshift/frontend-service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: uservice-django-poc
    name: uservice-django-poc-frontend
    namespace: experiments
  spec:
    ports:
    - name: 80-tcp
      port: 80 
      protocol: TCP
      targetPort: 80
    selector:
      app: uservice-django-poc
      deploymentconfig: uservice-django-poc-frontend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata: {}
