openshift/frontend-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: uservice-django-poc-frontend
  namespace: experiments
spec:
  host: poc.experiments.openshift.dsc.umich.edu
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: uservice-django-poc-frontend
    weight: 100
  wildcardPolicy: None
